--- a/media/logreader/css/logreader.css
+++ b/media/logreader/css/logreader.css
@@ -21,6 +21,9 @@ body {
 #logs tbody tr td {
 	padding: 0;
 }
+#logs tbody tr td.no-message {
+	padding: 8px;
+}
 #logs tbody tr td a {
 	display: block;
 	padding: 8px;
@@ -32,7 +35,6 @@ body {
 }
 #logs tbody tr.active td {
 	background-color: #a3e9ff;
-	cursor: pointer;
 }
 @media (min-width: 768px) {
 	#message-container.fixed {
